--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -872,6 +872,7 @@
   "Basic Model: {{ num }} Times/Month": "Model Dasar: {{ num }} Kali/Bulan",
   "Premium Model: {{ num }} Times/Month": "Model Premium: {{ num }} Kali/Bulan",
   "Top-tier Model: {{ num }} Times/Month": "Model Top-tier: {{ num }} Kali/Bulan",
+  "All models share memory with each other.": "Semua model berbagi memori antar satu sama lain.",
   "VIP Upgrade Successful!": "Pembaruan VIP berhasil!",
   "Failed to upgrade to VIP!": "Pembaruan ke VIP gagal!",
   "KYC Certification Instructions": "Petunjuk Verifikasi Pengenalan Wajah",
