--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -872,6 +872,7 @@
   "Basic Model: {{ num }} Times/Month": "기본 모델: {{ num }} 회/월",
   "Premium Model: {{ num }} Times/Month": "프리미엄 모델: {{ num }} 회/월",
   "Top-tier Model: {{ num }} Times/Month": "최상위 계층 모델: {{ num }} 회/월",
+  "All models share memory with each other.": "모든 모델이 서로 메모리를 공유합니다.",
   "VIP Upgrade Successful!": "VIP 업그레이드에 성공했습니다!",
   "Failed to upgrade to VIP!": "VIP 업그레이드에 실패했습니다!",
   "KYC Certification Instructions": "얼굴 인식 검증 설명",
