--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -873,6 +873,7 @@
   "Basic Model: {{ num }} Times/Month": "Grundmodell: {{ num }} Mal/Monat",
   "Premium Model: {{ num }} Times/Month": "Premiummodell: {{ num }} Mal/Monat",
   "Top-tier Model: {{ num }} Times/Month": "Top-Tier-Modell: {{ num }} Mal/Monat",
+  "Please create or log in to your wallet first.": "Bitte erstellen oder melden Sie sich zuerst bei Ihrem Wallet an.",
   "All models share memory with each other.": "Alle Modelle teilen sich gegenseitig die Speicherressourcen.",
   "VIP Upgrade Successful!": "VIP-Upgrade erfolgreich!",
   "Failed to upgrade to VIP!": "Der VIP-Upgrade ist fehlgeschlagen!",
