upate model select

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -692,8 +692,12 @@
   "Suitable for most tasks,Performance comparable to GPT-4o": "Für die meisten Aufgaben geeignet, Leistung vergleichbar mit GPT-4o",
   "Deep thinking,mathematical and writing abilities ≈ o3.": "Tiefes Denken, mathematische und schreibende Fähigkeiten ≈ o3.",
   "Support image recognition": "Unterstützung der Bilderkennung",
-  
   "Optimize code writing": "Die Code-Schreibweise optimieren",
+  "Suitable for reasoning and writing": "Geeignet für Schlussfolgerung und Schreiben",
+  "Multimodal, suitable for daily tasks": "Multimodaler, geeignet für alltägliche Aufgaben",
+  "Strong language skills": "Starke Sprachkenntnisse",
+  "Enhanced reasoning, suitable for complex tasks": "Erweiterte Logik, geeignet für komplexe Aufgaben",
+  "Lightweight general-purpose model with fast response speed": "Leichtgewichtiges Allgemeinzweckmodell mit hoher Reaktionsgeschwindigkeit",
   "Please select at least one model.": "Bitte wählen Sie mindestens ein Modell aus.",
   "You can select up to four models at most.": "Sie können maximal vier Modelle auswählen.",
   "Your friend needs to complete the check-in three times.": "Dein Freund muss die Anmeldung dreimal erledigen.",
@@ -877,6 +881,7 @@
   "All models share memory with each other.": "Alle Modelle teilen sich gegenseitig die Speicherressourcen.",
   "VIP Upgrade Successful!": "VIP-Upgrade erfolgreich!",
   "Failed to upgrade to VIP!": "Der VIP-Upgrade ist fehlgeschlagen!",
+  "Click To Upgrade": "Klicken Sie Aktualisieren",
   "KYC Certification Instructions": "Face Recognition Verification Instructions",
   "Please follow the steps below:": "Bitte folgen Sie den folgenden Schritten:",
   "Click \"Copy Link\".": "Klicken Sie auf \"Link kopieren\".",
