--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -693,6 +693,11 @@
   "Deep thinking,mathematical and writing abilities ≈ o3.": "",
   "Support image recognition": "",
   "Optimize code writing": "",
+  "Suitable for reasoning and writing": "",
+  "Multimodal, suitable for daily tasks": "",
+  "Strong language skills": "",
+  "Enhanced reasoning, suitable for complex tasks": "",
+  "Lightweight general-purpose model with fast response speed": "",
   "Please select at least one model.": "",
   "You can select up to four models at most.": "",
   "Your friend needs to complete the check-in three times.": "",
@@ -876,6 +881,7 @@
   "All models share memory with each other.": "",
   "VIP Upgrade Successful!": "",
   "Failed to upgrade to VIP!": "",
+  "Click To Upgrade": "",
   "KYC Certification Instructions": "",
   "Please follow the steps below:": "",
   "Click \"Copy Link\".": "",
