--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -693,6 +693,11 @@
   "Deep thinking,mathematical and writing abilities ≈ o3.": "Pensamiento profundo, habilidades matemáticas y de escritura ≈ o3.",
   "Support image recognition": "Soporte para el reconocimiento de imágenes",
   "Optimize code writing": "Optimizar la escritura de código",
+  "Suitable for reasoning and writing": "Adecuado para el razonamiento y la escritura",
+  "Multimodal, suitable for daily tasks": "Multimodal, adecuado para tareas diarias",
+  "Strong language skills": "Fuerte competencia lingüística",
+  "Enhanced reasoning, suitable for complex tasks": "Razonamiento mejorado, adecuado para tareas complejas",
+  "Lightweight general-purpose model with fast response speed": "Modelo ligero multipropósito con rápida velocidad de respuesta",
   "Please select at least one model.": "Por favor, seleccione al menos un modelo.",
   "You can select up to four models at most.": "Puede seleccionar hasta cuatro modelos como máximo.",
   "Your friend needs to complete the check-in three times.": "Tu amigo necesita completar el registro tres veces.",
@@ -876,6 +881,7 @@
   "All models share memory with each other.": "Todos los modelos comparten memoria entre sí.",
   "VIP Upgrade Successful!": "¡La actualización a VIP se ha completado con éxito!",
   "Failed to upgrade to VIP!": "El ascenso a VIP ha fallado!",
+  "Click To Upgrade": "Haz clic Para Actualizar",
   "KYC Certification Instructions": "Instrucciones de Verificación por Reconocimiento Facial",
   "Please follow the steps below:": "Siga los pasos a continuación:",
   "Click \"Copy Link\".": "Haga clic en \"Copiar enlace\".",
