--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -692,6 +692,11 @@
   "Deep thinking,mathematical and writing abilities ≈ o3.": "Pensée approfondie, capacités mathématiques et d'écriture ≈ o3.",
   "Support image recognition": "Prise en charge de la reconnaissance d'images",
   "Optimize code writing": "Optimiser l'écriture de code",
+  "Suitable for reasoning and writing": "Adapté au raisonnement et à l'écriture",
+  "Multimodal, suitable for daily tasks": "Multimodal, adapté aux tâches quotidiennes",
+  "Strong language skills": "Fortes compétences linguistiques",
+  "Enhanced reasoning, suitable for complex tasks": "Raisonnement renforcé, approprié pour des tâches complexes",
+  "Lightweight general-purpose model with fast response speed": "Modèle généraliste léger avec une vitesse de réponse rapide",
   "Please select at least one model.": "Veuillez sélectionner au moins un modèle.",
   "You can select up to four models at most.": "Vous pouvez sélectionner jusqu'à quatre modèles au maximum.",
   "Your friend needs to complete the check-in three times.": "Ton ami doit effectuer l'enregistrement trois fois.",
@@ -875,6 +880,7 @@
   "All models share memory with each other.": "Tous les modèles partagent la mémoire entre eux.",
   "VIP Upgrade Successful!": "La mise à niveau VIP a réussi !",
   "Failed to upgrade to VIP!": "La mise à niveau en VIP a échoué!",
+  "Click To Upgrade": "Cliquez pour Mettre à Niveau",
   "KYC Certification Instructions": "Instructions de Vérification par Reconnaissance Faciale",
   "Please follow the steps below:": "Veuillez suivre les étapes ci-dessous :",
   "Click \"Copy Link\".": "Cliquez sur \"Copier le lien\".",
