--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -693,6 +693,11 @@
   "Deep thinking,mathematical and writing abilities ≈ o3.": "Pemikiran mendalam, kemampuan matematika dan penulisan ≈ o3.",
   "Support image recognition": "Mendukung pengenalan gambar",
   "Optimize code writing": "Mengoptimalkan penulisan kode",
+  "Suitable for reasoning and writing": "Cocok untuk penalaran dan penulisan",
+  "Multimodal, suitable for daily tasks": "Multimodal, cocok untuk tugas-tugas harian",
+  "Strong language skills": "Kemampuan Bahasa yang Kuat",
+  "Enhanced reasoning, suitable for complex tasks": "Penalaran yang ditingkatkan, cocok untuk tugas-tugas kompleks",
+  "Lightweight general-purpose model with fast response speed": "Model umum ringan, kecepatan respons cepat",
   "Please select at least one model.": "Silakan pilih setidaknya satu model.",
   "You can select up to four models at most.": "Anda dapat memilih hingga empat model terbanyak.",
   "Your friend needs to complete the check-in three times.": "Temanmu perlu menyelesaikan pendaftaran sebanyak tiga kali.",
@@ -876,6 +881,7 @@
   "All models share memory with each other.": "Semua model berbagi memori antar satu sama lain.",
   "VIP Upgrade Successful!": "Pembaruan VIP berhasil!",
   "Failed to upgrade to VIP!": "Pembaruan ke VIP gagal!",
+  "Click To Upgrade": "Klik Untuk Memperbarui",
   "KYC Certification Instructions": "Petunjuk Verifikasi Pengenalan Wajah",
   "Please follow the steps below:": "Silakan ikuti langkah-langkah berikut:",
   "Click \"Copy Link\".": "Klik \"Salin Tautan\".",
