--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -693,6 +693,11 @@
   "Deep thinking,mathematical and writing abilities ≈ o3.": "深い思考、数学的能力と執筆能力は o3 に匹敵し",
   "Support image recognition": "画像認識をサポートしています",
   "Optimize code writing": "コードの書き方を最適化します",
+  "Suitable for reasoning and writing": "推理と執筆に適している",
+  "Multimodal, suitable for daily tasks": "マルチモーダル、日常的なタスクに適している",
+  "Strong language skills": "すぐれたげんごのうりょく",
+  "Enhanced reasoning, suitable for complex tasks": "強化された推理能力、複雑なタスクに適しています",
+  "Lightweight general-purpose model with fast response speed": "軽量汎用モデルで、応答速度が速いです",
   "Please select at least one model.": "少なくとも 1 つのモデルを選択してください。",
   "You can select up to four models at most.": "最大で 4 つのモデルを選択できます。",
   "Your friend needs to complete the check-in three times.": "あなたの友達は 3 回の出席登録を完了する必要があります。",
@@ -876,6 +881,7 @@
   "All models share memory with each other.": "すべてのモデルが互いにメモリを共有しています。",
   "VIP Upgrade Successful!": "VIP のアップグレードに成功しました！",
   "Failed to upgrade to VIP!": "VIP にアップグレードできませんでした!",
+  "Click To Upgrade": "クリックでアップグレード",
   "KYC Certification Instructions": "顔認証検証ガイド",
   "Please follow the steps below:": "以下の手順に従ってください：",
   "Click \"Copy Link\".": "「リンクをコピー」をクリックしてください。",
