--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -693,6 +693,11 @@
   "Deep thinking,mathematical and writing abilities ≈ o3.": "깊은 사고, 수학적 능력과 창작 능력은 o3과 비슷하며.",
   "Support image recognition": "이미지 인식을 지원합니다",
   "Optimize code writing": "코드 작성 최적화합니다",
+  "Suitable for reasoning and writing": "추론과 글쓰기에 적합하다",
+  "Multimodal, suitable for daily tasks": "멀티모달, 일상적인 작업에 적합하다",
+  "Strong language skills": "뛰어난 언어 능력",
+  "Enhanced reasoning, suitable for complex tasks": "강화된 추론, 복잡한 과제에 적합합니다",
+  "Lightweight general-purpose model with fast response speed": "경량 다목적 모델로 응답 속도가 빠릅니다",
   "Please select at least one model.": "적어도 하나의 모델을 선택하세요.",
   "You can select up to four models at most.": "최대 4개의 모델을 선택할 수 있습니다.",
   "Your friend needs to complete the check-in three times.": "네 친구는 세 번의 출석 체크인을 완료해야 합니다.",
@@ -876,6 +881,7 @@
   "All models share memory with each other.": "모든 모델이 서로 메모리를 공유합니다.",
   "VIP Upgrade Successful!": "VIP 업그레이드에 성공했습니다!",
   "Failed to upgrade to VIP!": "VIP 업그레이드에 실패했습니다!",
+  "Click To Upgrade": "클릭하여 업그레이드",
   "KYC Certification Instructions": "얼굴 인식 검증 설명",
   "Please follow the steps below:": "다음 단계를 따르십시오:",
   "Click \"Copy Link\".": "\"링크 복사\"를 클릭하세요.",
