--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -693,6 +693,11 @@
   "Deep thinking,mathematical and writing abilities ≈ o3.": "Pensamento profundo, habilidades matemáticas e de escrita ≈ o3.",
   "Support image recognition": "Suporte para o reconhecimento de imagens",
   "Optimize code writing": "Otimizar a escrita de código",
+  "Suitable for reasoning and writing": "Adequado para raciocínio e escrita",
+  "Multimodal, suitable for daily tasks": "Multimodal, adequado para tarefas diárias",
+  "Strong language skills": "Forte habilidade linguística",
+  "Enhanced reasoning, suitable for complex tasks": "Raciocínio aprimorado, adequado para tarefas complexas",
+  "Lightweight general-purpose model with fast response speed": "Modelo genérico leve com alta velocidade de resposta",
   "Please select at least one model.": "Por favor, selecione pelo menos um modelo.",
   "You can select up to four models at most.": "Você pode selecionar até quatro modelos no máximo.",
   "Your friend needs to complete the check-in three times.": "Seu amigo precisa concluir o check-in três vezes.",
@@ -876,6 +881,7 @@
   "All models share memory with each other.": "Todos os modelos compartilham a memória entre si.",
   "VIP Upgrade Successful!": "A atualização para VIP foi bem-sucedida!",
   "Failed to upgrade to VIP!": "O upgrade para VIP falhou!",
+  "Click To Upgrade": "Clique para Atualizar",
   "KYC Certification Instructions": "Instruções de Verificação por Reconhecimento Facial",
   "Please follow the steps below:": "Siga os passos abaixo:",
   "Click \"Copy Link\".": "Clique em \"Copiar Link\".",
