--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -692,6 +692,11 @@
   "Deep thinking,mathematical and writing abilities ≈ o3.": "Глубокое мышление, математические и писательские способности ≈ o3.",
   "Support image recognition": "Поддерживает распознавание изображений",
   "Optimize code writing": "Оптимизировать написание кода",
+  "Suitable for reasoning and writing": "Подходит для рассуждений и письма",
+  "Multimodal, suitable for daily tasks": "Мультимодальный, подходит для ежедневных задач",
+  "Strong language skills": "Прочные языковые навыки",
+  "Enhanced reasoning, suitable for complex tasks": "Укрепенное рассуждение, подходящее для сложных задач",
+  "Lightweight general-purpose model with fast response speed": "Легковесная универсальная модель с высокой скоростью отклика",
   "Please select at least one model.": "Пожалуйста, выберите хотя бы один модель.",
   "You can select up to four models at most.": "Вы можете выбрать до четырех моделей максимум.",
   "Your friend needs to complete the check-in three times.": "Твой друг должен выполнить регистрацию трижды.",
@@ -875,6 +880,7 @@
   "All models share memory with each other.": "Все модели общаются памятью друг с другом.",
   "VIP Upgrade Successful!": "Обновление VIP успешно выполнено!",
   "Failed to upgrade to VIP!": "Процесс обновления до VIP завершился с ошибкой!",
+  "Click To Upgrade": "Кликните, чтобы Обновить",
   "KYC Certification Instructions": "Инструкции по верификации по распознаванию лиц",
   "Please follow the steps below:": "Пожалуйста, следуйте следующим шагам:",
   "Click \"Copy Link\".": "Нажмите \"Копировать ссылку\".",
