--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -693,6 +693,11 @@
   "Deep thinking,mathematical and writing abilities ≈ o3.": "Derin düşünme, matematiksel ve yazı yazma yetenekleri ≈ o3.",
   "Support image recognition": "Görüntü tanıma desteği sağlar",
   "Optimize code writing": "Kod yazımını optimize et",
+  "Suitable for reasoning and writing": "Mantıkça çıkarım yapmak ve yazmaya uygun",
+  "Multimodal, suitable for daily tasks": "Multimodal, günlük görevlere uygun",
+  "Strong language skills": "Güçlü Dil Becerileri",
+  "Enhanced reasoning, suitable for complex tasks": "Güçlendirilmiş mantık, karmaşık görevler için uygundur",
+  "Lightweight general-purpose model with fast response speed": "Hafif genel amaçlı model, hızlı yanıt verme kabiliyetine sahiptir",
   "Please select at least one model.": "Lütfen en az bir model seçin.",
   "You can select up to four models at most.": "En fazla dört model seçebilirsiniz.",
   "Your friend needs to complete the check-in three times.": "Arkadaşın üç kez kayıt yapması gerekiyor.",
@@ -876,6 +881,7 @@
   "All models share memory with each other.": "Tüm modeller birbirleri arasında bellekleri paylaşır.",
   "VIP Upgrade Successful!": "VIP yükseltimi başarıyla tamamlandı!",
   "Failed to upgrade to VIP!": "VIP'e yükseltme başarısız oldu!",
+  "Click To Upgrade": "Güncellemek İçin Tıklayın",
   "KYC Certification Instructions": "Yüz Tanıma Doğrulama Talimatları",
   "Please follow the steps below:": "Lütfen aşağıdaki adımları izleyin:",
   "Click \"Copy Link\".": "\"Bağlantıyı Kopyala\"'ya tıklayın.",
