--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -691,7 +691,12 @@
   "Suitable for most tasks,Performance comparable to GPT-4o": "适用于大多数任务，性能比肩GPT-4o",
   "Deep thinking,mathematical and writing abilities ≈ o3.": "深度思考，在数学、创意写作等任务性能上比肩o3",
   "Support image recognition": "支持图片识别",
-  "Optimize code writing": "优化写代码功能",
+  "Optimize code writing": "适合推理和写作",
+  "Suitable for reasoning and writing": "适合推理和写作",
+  "Multimodal, suitable for daily tasks": "多模态，适合日常任务",
+  "Strong language skills": "语言能力强",
+  "Enhanced reasoning, suitable for complex tasks": "加强推理，适合复杂任务",
+  "Lightweight general-purpose model with fast response speed": "轻量通用模型，响应速度快",
   "Please select at least one model.": "请至少选择一个模型。",
   "You can select up to four models at most.": "你最多可以选择四个模型。",
   "Your friend needs to complete the check-in three times.": "你的朋友需要完成三次签到。",
@@ -875,6 +880,7 @@
   "All models share memory with each other.": "所有模型之间共享记忆。",
   "VIP Upgrade Successful!": "升级VIP成功!",
   "Failed to upgrade to VIP!": "升级VIP失败!",
+  "Click To Upgrade": "点击升级",
   "KYC Certification Instructions": "人脸识别验证说明",
   "Please follow the steps below:": "请按照以下步骤操作:",
   "Click \"Copy Link\".": "单击“复制链接”。",
