--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -692,6 +692,11 @@
   "Deep thinking,mathematical and writing abilities ≈ o3.": "ความคิดลึกซึ้ง ความสามารถทางคณิตศาสตร์และทางการเขียน ≈ o3",
   "Support image recognition": "รองรับการจำแนกภาพ",
   "Optimize code writing": "ปรับปรุงการเขียนโค้ด",
+  "Suitable for reasoning and writing": "เหมาะสำหรับการให้เหตุผลและการเขียน",
+  "Multimodal, suitable for daily tasks": "มัลติมอดัล, เหมาะสำหรับการดำเนินงานประจำวัน",
+  "Strong language skills": "ความสามารถภาษาที่แข็งแกร่ง",
+  "Enhanced reasoning, suitable for complex tasks": "การให้เหตุผลที่ได้รับการเสริมสร้าง เหมาะสำหรับงานที่ซับซ้อน",
+  "Lightweight general-purpose model with fast response speed": "โมเดลอเนกประสงค์น้ำหนักเบาที่ตอบสนองเร็ว",
   "Please select at least one model.": "กรุณาเลือกแบบจำลองอย่างน้อยหนึ่งแบบ",
   "You can select up to four models at most.": "คุณสามารถเลือกได้สูงสุดสี่แบบจำลอง",
   "Your friend needs to complete the check-in three times.": "เพื่อนของคุณต้องทำการเช็คอินสามครั้ง",
@@ -875,6 +880,7 @@
   "All models share memory with each other.": "ทุก môเดลแชร์ความจำระหว่างกัน",
   "VIP Upgrade Successful!": "การอัปเกรดเป็น VIP สำเร็จ!",
   "Failed to upgrade to VIP!": "การอัปเกรดเป็น VIP ผิดพลาด!",
+  "Click To Upgrade": "กดเพื่ออัปเกรด",
   "KYC Certification Instructions": "คำแนะนำการยืนยันการแรกว얼",
   "Please follow the steps below:": "โปรดทำตามขั้นตอนต่อไปนี้:",
   "Click \"Copy Link\".": "คลิก \"คัดลอกลิงค์\"",
