--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -693,6 +693,11 @@
   "Deep thinking,mathematical and writing abilities ≈ o3.": "Tư duy sâu sắc, khả năng toán học và năng lực viết văn xunge o3.",
   "Support image recognition": "Hỗ trợ nhận dạng hình ảnh",
   "Optimize code writing": "Tối ưu hóa việc viết mã",
+  "Suitable for reasoning and writing": "Phù hợp với lý luận và viết văn",
+  "Multimodal, suitable for daily tasks": "Đa môđun, phù hợp với các nhiệm vụ hàng ngày",
+  "Strong language skills": "Khả năng ngôn ngữ mạnh mẽ",
+  "Enhanced reasoning, suitable for complex tasks": "Lý luận được tăng cường, phù hợp với các nhiệm vụ phức tạp",
+  "Lightweight general-purpose model with fast response speed": "Mô hình đa năng nhẹ với tốc độ phản hồi nhanh",
   "Please select at least one model.": "Vui lòng chọn ít nhất một mô hình.",
   "You can select up to four models at most.": "Bạn có thể chọn tối đa bốn mô hình.",
   "Your friend needs to complete the check-in three times.": "Bạn của bạn cần hoàn thành việc đăng ký tham dự ba lần.",
@@ -865,6 +870,7 @@
   "All models share memory with each other.": "Tất cả các mô hình chia sẻ bộ nhớ với nhau.",
   "VIP Upgrade Successful!": "Việc nâng cấp VIP đã thành công!",
   "Failed to upgrade to VIP!": "Việc nâng cấp VIP thất bại!",
+  "Click To Upgrade": "Güncellemek İçin Tıklayın",
   "KYC Certification Instructions": "Hướng Dẫn Xác Thực Nhận Dạng Mặt",
   "Please follow the steps below:": "Vui lòng làm theo các bước sau:",
   "Click \"Copy Link\".": "Nhấp vào \"Sao Chép Liên Kết\".",
